--- a/flaskLabFiles/templates/hello.html
+++ b/flaskLabFiles/templates/hello.html
@@ -7,5 +7,7 @@
 <body>
 <h1>Hello</h1>
 <p>Welcome to your first Flask adventure!</p>
+ <h2> How is your day? </h2>
+    <p> Hopefully it is going good. Otherwise I hope it turns around!</p> 
 </body>
 </html>
