--- a/flaskLabFiles/templates/fancyHello.html
+++ b/flaskLabFiles/templates/fancyHello.html
@@ -8,6 +8,6 @@
 <body>
 <h1>Hello</h1>
 <p>Welcome to your first Flask adventure!</p>
-<img alt="picture of a fruit" src="{{ url_for('static', filename='fruit.jpg') }}" />
+<img alt="picture of a fruit" src="{{ url_for('static', filename='hello.jpeg') }}" />
 </body>
 </html>
