--- a/flaskLabFiles/templates/biggerGreet.html
+++ b/flaskLabFiles/templates/biggerGreet.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}" />
 </head>
 <body>
-<h1>Hello {{ person }}, Class of {{ year }}</h1>
+<h1>Hello {{ person }} that is {{ height }}, Class of {{ year }}</h1>
 <p>Welcome to your first Flask adventure!</p>
 <img alt="picture of a fruit" src="{{ url_for('static', filename='fruit.jpg') }}" />
 </body>
