--- a/flaskLabFiles/templates/index.html
+++ b/flaskLabFiles/templates/index.html
@@ -21,6 +21,9 @@
 
 	  <p>If so, what was it?</p>
 	  <input type="text" placeholder="none" name="actualNickname">
+		
+	  <p>What is your class year? </p>
+	  <input type="text" placeholder="none" name="classYear">
 
 	  <p><label for="flavor">Select your favorite ice cream flavor</label></p>
 	  <select id="flavor" name="flavor" size="1">
